discussion/kv_engine/174946/174946_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52134: ByID scan support for MagmaKVStore

Implement the scan(ByIdScanContext) function utilising magma's
KeyIterator.

OSO and RangeScan tests are enabled to give coverage of this feature.

Change-Id: Ida6b030175077920c854ee492d1f7cfb2ae659b4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-05-17 14:26:36.000000000
Message: 
Patch Set 3: Patch Set 2 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-17 14:41:13.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46180/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46180/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7240/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7240/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7142/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7142/ )

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7142/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19643/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19643/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19295/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19295/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20321/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20321/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27700/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27700/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18507/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18507/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17532/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:72:41: error: unknown type name "Slice"; did you mean "magma::Slice"? [clang-diagnostic-error]
void DomainAwareKeyIterator::Seek(const Slice& startKey) {
                                        ^~~~~
                                        magma::Slice
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/slice.h:27:20: note: "magma::Slice" declared here
class LIBMAGMA_API Slice {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:92:7: error: unknown type name "Slice"; did you mean "magma::Slice"? [clang-diagnostic-error]
const Slice DomainAwareKeyIterator::GetKey() {
      ^~~~~
      magma::Slice
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/slice.h:27:20: note: "magma::Slice" declared here
class LIBMAGMA_API Slice {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:98:7: error: unknown type name "Slice"; did you mean "magma::Slice"? [clang-diagnostic-error]
const Slice DomainAwareKeyIterator::GetMeta() {
      ^~~~~
      magma::Slice
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/slice.h:27:20: note: "magma::Slice" declared here
class LIBMAGMA_API Slice {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:104:1: error: no type named "SeqNo" in namespace "magma"; did you mean "magma::Magma::SeqNo"? [clang-diagnostic-error]
Magma::SeqNo DomainAwareKeyIterator::GetSeqno() const {
^~~~~~~~~~~~
magma::Magma::SeqNo
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/magma.h:52:11: note: "magma::Magma::SeqNo" declared here
    using SeqNo = uint64_t;
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:104:1: error: use of undeclared identifier "Magma"; did you mean "magma"? [clang-diagnostic-error]
Magma::SeqNo DomainAwareKeyIterator::GetSeqno() const {
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/magma.h:40:11: note: "magma" declared here
namespace magma {
          ^
note: this fix will not be applied because it overlaps with another fix
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:110:1: error: unknown type name "Status"; did you mean "magma::Status"? [clang-diagnostic-error]
Status DomainAwareKeyIterator::GetValue(Slice& value) {
^~~~~~
magma::Status
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/status.h:30:20: note: "magma::Status" declared here
class LIBMAGMA_API Status {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:110:41: error: unknown type name "Slice" [clang-diagnostic-error]
Status DomainAwareKeyIterator::GetValue(Slice& value) {
                                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17532/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:72:41:
error: unknown type name "Slice"; did you mean "magma::Slice"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17532/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38795/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:72:41:
error: unknown type name "Slice"; did you mean "magma::Slice"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38795/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16554/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
